--- a/templates/index.html
+++ b/templates/index.html
@@ -80,7 +80,7 @@
         <div class="container" id="maincontent" tabindex="-1">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="/static/img/learn_python.jpeg" alt="" width="304"height="236">                                                    
+                    <img class="img-responsive" src="https://ae01.alicdn.com/kf/HTB1mHozLXXXXXXcXFXXq6xXFXXXD/UCANBE-Brand-8pcs-Luxury-Rose-Gold-Metal-Makeup-Brushes-Set-Grasp-Cosmetic-Professional-Eyeshadow-Contour-Make.jpg" alt="" width="304"height="236">                                                    
                     <div class="intro-text">
                         <h1 class="name">Hey CleverProgrammer {{name}}!</h1>
                         <hr class="star-light">
